[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemies/boss/black_hole.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 286.472

[sub_resource type="CircleShape2D" id=2]
radius = 49.0918

[node name="black_hole" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="nucleo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="nucleo"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.99998, -2.00272e-05 )
scale = Vector2( 34.4, 32.4 )

[connection signal="body_entered" from="." to="." method="_on_black_hole_body_entered"]
[connection signal="body_entered" from="nucleo" to="." method="_on_nucleo_body_entered"]
[connection signal="body_exited" from="nucleo" to="." method="_on_nucleo_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
